Fix responsive layout issues with wiget
* Override the hard-coded inline width on the image widget caption so
  that the logos don't get cut off when the column width is less than
  300px
* Set a hard-coded height on the column so that the images don't overlap
  the footer on small screens. This is necessary because the cycle
  plugin relies on absolute positioning, and a simple clearfix won't
  do the trick.

--- a/public_html/wp-content/themes/wordcamp-central-2012/style.css
+++ b/public_html/wp-content/themes/wordcamp-central-2012/style.css
@@ -1200,8 +1200,12 @@ li:after { content: "."; display: block; height: 0; clear: both; visibility: hid
 }
 
 /* !Featured Sponsors */
+.sponsors-widget-list {
+	height: 320px;
+}
 .sponsors-widget-list .wp-caption {
 	background: transparent;
+	width: 100% !important;
 	min-height: 320px;
 	display: flex;
 	flex-direction: column;
